--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TE AMO BB <3 </title>
+    <title>Formulario de Preguntas <3 </title>
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
