--- a/index.html
+++ b/index.html
@@ -3,33 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Preguntas</title>
+    <title>Formulario con Servicios Web Gratuitos</title>
     <link rel="stylesheet" href="css/styles.css">
-
 </head>
 <body>
-    <h1>FORMULARIO</h1>
-
-    <form action="#" method="post">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br><br>
-
-        <label for="correo">Correo Electrónico:</label>
-        <input type="email" id="correo" name="correo" required><br><br>
-
-        <label for="mensaje">Mensaje:</label><br>
-        <textarea id="mensaje" name="mensaje" rows="4" cols="50" required></textarea><br><br>
-
-        <button type="submit">Enviar</button>
-    </form>
-
-    <h2>Servicios Web Gratuitos</h2>
-    <ul>
-        <li><a href="https://pages.github.com/" target="_blank">GitHub Pages</a></li>
-        <li><a href="https://www.netlify.com/" target="_blank">Netlify</a></li>
-        <li><a href="https://vercel.com/" target="_blank">Vercel</a></li>
-        <li><a href="https://www.infinityfree.net/" target="_blank">InfinityFree</a></li>
-        <li><a href="https://www.000webhost.com/" target="_blank">000WebHost</a></li>
-    </ul>
+    <div class="form-container">
+        <h1>Elige un Servicio Web Gratuito</h1>
+        <form>
+            <label for="service">Selecciona un servicio:</label>
+            <select id="service" name="service">
+                <option value="github">GitHub Pages</option>
+                <option value="netlify">Netlify</option>
+                <option value="vercel">Vercel</option>
+                <option value="firebase">Firebase Hosting</option>
+                <option value="heroku">Heroku</option>
+            </select>
+            <input type="submit" value="Enviar">
+        </form>
+    </div>
 </body>
 </html>
